style.css
body{
    margin: 0px;
    background-color: darkgreen;
}
main{
    margin: 20px;
}
h1{
    font-size: 50px;
    color:rgb(55, 55, 55);
    text-align: center;
}
h2{
    font-size: 30px;
    color: rgb(55, 55, 55);
    text-align: center;
}
h3{
    font-size: 30;
    color: white;
    margin: 0.5rem;
    text-align: center;
}
h4{
    font-size: 25;
    color: darkgreen;
    text-align: center;
}

.title{
    font-size: 20px;
    color: white;
    padding: 15px;
}

nav{
    background-color: darkgreen;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.menu_references{
    list-style-type: none;
    padding: 0px;
    margin: 0;
    display: flex;
}
.menu_references li a{
    color: white;
    text-decoration: none;
    text-align: center;
    display: block;
    padding: 15px;
}
.menu_references a:hover{
    background-color: forestgreen;
}


.banner ul{
    list-style-type: none;
    position: absolute;
    inset: 0;
}
.banner_image{
    width: 100%;
    height: 20rem;
    object-fit: cover;
}
.banner{
    width: 100%;
    height: 20rem;
    position: relative;
}
.banner_foreground{
    display: flex;
}
.contact_title_icons{
    text-align: center;
}
.contact_icon{
    width: 3rem;
    height: 3rem;
    margin-left: 1rem;
    margin-right: 1rem;
    padding: 0.1rem;
    border-radius: 3px;
    background-color: white;
}


.main_container{
    display: flex;
    justify-content: space-between;
    margin: 1rem;
}

.left_section{
    display: flex;
    flex-direction: column;
    width: 58%;
    height: auto;
    background-color: rgb(2, 129, 2);
    border-radius: 3px;
}
.about_content{
    display: flex;
    margin: 0.5rem;
    background-color: rgb(216, 215, 215);
    border-radius: 3px;
    align-items: center;
}
.about_content div{
    margin: 0.5rem;
}
.profile_picture{
    max-width: 15rem;
    max-height: 15rem;
    border-radius: 3px;
    margin: 0.5rem;
}

.skills_content{
    display: flex;
    margin: 0.5rem;
    background-color: rgb(216, 215, 215);
    border-radius: 3px;
    align-items: center;
    justify-content: space-evenly;
}
#Skill{
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 7rem;
}
.skills_content img{
    width: 3rem;
    height: 3rem;
    margin: 0.5rem;
}

.projects_list{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 40%;
    background-color: rgb(2, 129, 2);
    border-radius: 3px;
}
.project{
    display: flex;
    flex-direction: column;
    margin: 0.5rem;
    background-color: rgb(216, 215, 215);
    border-radius: 3px;
}
.project_line{
    width: 90%;
    align-self: center;
    margin: 0.5rem;
}

.projects_list a{
    text-decoration: none;
    color: white;
}

#green_button{
    text-decoration: none;
    background-color: darkgreen;
    color: white;
    text-align: center;
    border-radius: 3px;
    padding: 0.5rem;
    width: inherit;
    font-weight: bold;
}
.projects_list a:hover{
    text-decoration: underline;
}

